[package]
name = 'termtris'
version = '0.1.0'
authors = ['Christian Steimel <me@C14L.com>']
edition = '2018'

[dependencies]
crossterm = "0.17.4"
rand = "0.7.3"

# Optimize resulting binary for size:
[profile.release]
opt-level = 'z'  # level 3 (default) optimizes for binary speed
lto = true  # Enable Link Time Optimization (LTO)
codegen-units = 1  # Use only one codegen unit to build for some extra optimizations
panic = 'abort'  # Remove stack trace on panic to safe size
